--- a/MyStoreProject/test-output/old/Suite/methods-not-run.html
+++ b/MyStoreProject/test-output/old/Suite/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.mystore.testcases.IndexPageTests.verifyTitle</td></tr>
+<tr><td>com.mystore.testcases.HomePageTests.orderHistoryTests</td></tr>
 <tr><td>com.mystore.base.BaseClass.loadConfig</td></tr>
 <tr><td>com.mystore.base.BaseClass.loadConfig</td></tr>
 <tr><td>com.mystore.base.BaseClass.loadConfig</td></tr>
@@ -6,11 +8,9 @@
 <tr><td>com.mystore.base.BaseClass.loadConfig</td></tr>
 <tr><td>com.mystore.base.BaseClass.loadConfig</td></tr>
 <tr><td>com.mystore.base.BaseClass.loadConfig</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
-<tr><td>com.mystore.base.BaseClass.afterSuite</td></tr>
+<tr><td>com.mystore.testcases.SearchResultTests.validateProductAvaility</td></tr>
+<tr><td>com.mystore.testcases.IndexPageTests.VerifyLogo</td></tr>
+<tr><td>com.mystore.testcases.EndToEnd.endToEndTest</td></tr>
+<tr><td>com.mystore.testcases.HomePageTests.wishListTests</td></tr>
+<tr><td>com.mystore.testcases.OrderPageTests.verifyTotalPrice</td></tr>
 </table>
